--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
   release-and-deploy:
     runs-on: ubuntu-latest
 
-    needs: [build, wdio]
+    needs: [build]
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout Project
