fixed code review comments

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,10 +40,6 @@ jobs:
       - name: Setup Project
         uses: ./.github/actions/setup
       - name: Build
-        env:
-          TERRA_DEV_SITE_NEW_RELIC_LICENSE_KEY: ${{ secrets.TERRA_DEV_SITE_NEW_RELIC_LICENSE_KEY }}
-          TERRA_DEV_SITE_NEW_RELIC_APPLICATION_ID: "144458769"
-          TERRA_DEV_SITE_PUBLIC_PATH: /terra-asset-bundle/
         run: npm run compile:prod
       - name: Release
         env:
@@ -54,7 +50,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./lib
           force_orphan: true
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
