--- a/package.json
+++ b/package.json
@@ -25,6 +25,29 @@
     "extends": "@cerner/package-json-lint-config-terra/package-json-lint.config.js",
     "projectType": "module"
   },
+  "scripts": {
+    "clean": "rm -rf node_modules",
+    "clean:install": "npm run clean && npm install",
+    "compile": "npm run compile:clean && npm run compile:build",
+    "compile:build": "NODE_ENV=development webpack --mode=development",
+    "compile:clean": "rm -rf ./lib",
+    "compile:prod": "rm -rf ./lib; NODE_ENV=production webpack --mode=production",
+    "deploy": "npm run compile:prod && gh-pages -d lib",
+    "deploy-gh-pages": "gh-pages -d lib",
+    "jest": "jest",
+    "jest:compile": "npm run compile && npm run jest",
+    "jest:coverage": "jest --coverage",
+    "lint": "npm run lint:js && npm run lint:package-json",
+    "lint:fix": "npm run lint:js:fix",
+    "lint:js": "eslint --ext .js,.jsx .",
+    "lint:js:fix": "eslint --fix --ext .js,.jsx .",
+    "lint:package-json": "terra package-json-lint",
+    "postinstall": "npm run compile",
+    "prepare-for-release": "terra prepare-for-release",
+    "pretest": "npm run lint",
+    "test": "npm run test:jest",
+    "test:jest": "npm run jest:compile"
+  },
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.14.0",
@@ -134,6 +157,8 @@
     "@cerner/jest-config-terra": "^1.5.0",
     "@cerner/package-json-lint": "^1.3.0",
     "@cerner/package-json-lint-config-terra": "^1.0.0",
+    "@cerner/terra-cli": "^1.6.0",
+    "@cerner/terra-open-source-scripts": "^1.0.1",
     "@cerner/webpack-config-terra": "^3.0.1",
     "babel-eslint": "^10.1.0",
     "enzyme": "^3.3.0",
@@ -144,32 +169,8 @@
     "jest": "^26.6.3",
     "postcss": "^8.4.18",
     "postcss-loader": "^3.0.0",
-    "rimraf": "^3.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
-  },
-  "scripts": {
-    "clean": "rm -rf node_modules",
-    "clean:install": "npm run clean && npm install",
-    "compile": "npm run compile:clean && npm run compile:build",
-    "compile:build": "webpack --mode=development",
-    "compile:clean": "rm -rf ./lib",
-    "compile:prod": "webpack --mode=production",
-    "deploy": "npm run compile:prod && gh-pages -d build",
-    "deploy-gh-pages": "gh-pages -d lib",
-    "jest": "jest",
-    "jest:compile": "npm run compile && npm run jest",
-    "jest:coverage": "jest --coverage",
-    "lint": "npm run lint:js && npm run lint:package-json",
-    "lint:fix": "npm run lint:js:fix",
-    "lint:js": "eslint --ext .js,.jsx .",
-    "lint:js:fix": "eslint --fix --ext .js,.jsx .",
-    "lint:package-json": "terra package-json-lint",
-    "postinstall": "npm run compile",
-    "prepare-for-release": "terra prepare-for-release",
-    "pretest": "npm run lint",
-    "test": "npm run test:jest",
-    "test:jest": "npm run jest:compile"
   }
 }
