--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "terra-asset-bundle",
+  "name": "@cerner/terra-asset-bundle",
   "version": "0.1.0",
   "description": "frontend assets for terra",
   "main": "src/index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cerner/terra-asset-bundle"
+    "url": "git+https://github.com/cerner/terra-asset-bundle.git"
   },
   "keywords": [
     "Cerner",
@@ -172,5 +172,9 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
+  },
+  "homepage": "https://github.com/cerner/terra-asset-bundle#readme",
+  "directories": {
+    "test": "tests"
   }
 }
