Initial commit. DNM

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "@cerner/terra-asset-bundle",
   "version": "0.2.0",
   "description": "frontend assets for terra",
-  "main": "src/index.js",
+  "main": "src/index.mjs",
+  "type": "module",
   "engines": {
     "node": "^10.13.0 || ^12.0.0 || ^14.0.0"
+  },
+  "config": {
+    "publicDir": "public"
   },
   "repository": {
     "type": "git",
@@ -29,8 +33,9 @@
     "clean": "rm -rf node_modules",
     "clean:install": "npm run clean && npm install",
     "compile": "npm run compile:clean && npm run compile:build",
-    "compile:build": "NODE_ENV=development webpack --mode=development",
+    "compile:build": "webpack --mode=development",
     "compile:clean": "rm -rf ./lib",
+    "compile:rollup": "rollup -c && node clean.js",
     "compile:prod": "rm -rf ./lib; NODE_ENV=production webpack --mode=production",
     "deploy": "npm run compile:prod && gh-pages -d lib",
     "deploy-gh-pages": "gh-pages -d lib",
@@ -160,15 +165,25 @@
     "@cerner/terra-cli": "^1.6.0",
     "@cerner/terra-open-source-scripts": "^1.0.1",
     "@cerner/webpack-config-terra": "^3.0.1",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "babel-eslint": "^10.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.2.2",
     "eslint": "^7.0.0",
+    "fs-extra": "^11.1.1",
     "gh-pages": "^4.0.0",
+    "globby": "^13.1.3",
     "jest": "^26.6.3",
     "postcss": "^8.4.18",
     "postcss-loader": "^3.0.0",
+    "rollup": "^3.20.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
