--- a/package.json
+++ b/package.json
@@ -141,7 +141,8 @@
     "terra-toggle-section-header": "^2.58.4",
     "terra-toolbar": "^1.29.0",
     "terra-visually-hidden-text": "^2.35.0",
-    "xfc": "^1.11.0"
+    "xfc": "^1.11.0",
+    "mini-css-extract-plugin": "^1.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
