--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "compile:build": "NODE_ENV=development webpack --mode=development",
     "compile:clean": "rm -rf ./lib",
     "compile:prod": "rm -rf ./lib; NODE_ENV=production webpack --mode=production",
+    "start": "webpack serve",
+    "start:prod": "webpack serve --env=[disableHotReloading] --mode=production",
     "deploy": "npm run compile:prod && gh-pages -d lib",
     "deploy-gh-pages": "gh-pages -d lib",
     "jest": "jest",
@@ -170,9 +172,10 @@
     "jest": "^26.6.3",
     "postcss": "^8.4.18",
     "postcss-loader": "^3.0.0",
-    "webpack": "^4.46.0",
+    "webpack": "^5.28.0",
     "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "homepage": "https://github.com/cerner/terra-asset-bundle#readme",
   "directories": {
