--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "test:jest": "npm run jest:compile"
   },
   "dependencies": {
+    "mini-css-extract-plugin": "^1.3.1",
     "react": "^16.8.5",
     "react-dom": "^16.14.0",
     "react-intl": "^2.9.0",
@@ -143,8 +144,7 @@
     "terra-toggle-section-header": "^2.58.4",
     "terra-toolbar": "^1.29.0",
     "terra-visually-hidden-text": "^2.35.0",
-    "xfc": "^1.11.0",
-    "mini-css-extract-plugin": "^1.3.1"
+    "xfc": "^1.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
@@ -174,8 +174,8 @@
     "postcss-loader": "^3.0.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.8.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   },
   "homepage": "https://github.com/cerner/terra-asset-bundle#readme",
   "directories": {
